2008-07-02  Michael Hutchinson <mhutchinson@novell.com> 

	* Mono.TextEditor/Document.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: Fix a couple of
	  crasher race conditions.
	* Mono.TextEditor.Highlighting/WorkerThread.cs: Catch exceptions in
	  worker threads so that they don't crash MD.

2008-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextMarker.cs:
	  Added support for style overriding in text markers. Now a text
	  marker can easily change the text style without having to implement
	  the draw method. Also use the background defined by the style
	  object, if there is one.
	* Mono.TextEditor.Highlighting/ChunkStyle.cs: Added background color
	  property. Added copy constructor.

2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/TextMarker.cs, Mono.TextEditor/BookmarkMargin.cs:
	  Added width and height parameters to IIConBarMarker.DrawIcon.
	  Simplifies work to implementers.

2008-06-23  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/Segment.cs:
	  Optimized selection - fixing [Bug 402777] New: Mouse selection is
	  very slow.

2008-06-23  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/Caret.cs, Mono.TextEditor/LineSegment.cs:
	  Refactored text editor. Corrected Document -> TextEditorData ->
	  TextEditor layers.

2008-06-23  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: fixed 'Bug 402543 - Crash
	  while pasting text from closed document.'.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Disable version auto-increment.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Don't allow replacing text in
	  read-only mode.
